--- a/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.html
+++ b/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.html
@@ -155,10 +155,10 @@
                     }
                   </div>
                   
-                  <div class="form-group small-width">
+                  <!-- <div class="form-group small-width">
                     <label>Idade</label>
                     <input formControlName="age" type="number" class="form-control" [disabled]="isLoading" min="0" max="150">
-                  </div>
+                  </div> -->
 
                   <div class="form-group">
                     <label>Vínculo *</label>
@@ -180,7 +180,7 @@
                   </div>
 
                   <button type="button" (click)="removeAccompanying($index)" class="btn-icon-danger" [disabled]="isLoading" title="Remover">
-                    ×
+                    Remover
                   </button>
                 </div>
               }
