--- a/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
+++ b/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
@@ -172,14 +172,15 @@
             border-radius: 4px;
             transition: background-color 0.2s;
             margin-top: 24px;
-            font-size: 24px;
+            font-size: 16px;
             font-weight: bold;
             line-height: 1;
             min-width: 36px;
             height: 36px;
+            background-color: rgba(231, 76, 60, 0.1);
 
             &:hover:not(:disabled) {
-              background-color: rgba(231, 76, 60, 0.1);
+              background-color: rgba(231, 76, 60, 0.2);
             }
 
             &:disabled {
@@ -212,7 +213,12 @@
           &.btn-sm {
             padding: 8px 16px;
             font-size: 13px;
+            
+            @media (max-width: 999px) {
+              width: 100%;
+            }
           }
+
         }
       }
 
