--- a/code/frontend/src/app/pages/logged/attendance/visitor-tab/visitor-management.component.html
+++ b/code/frontend/src/app/pages/logged/attendance/visitor-tab/visitor-management.component.html
@@ -116,6 +116,7 @@
   [striped]="true"
   [hoverable]="true"
   [enablePagination]="true"
+  [preservePage]="true"
 >
   <ng-template #rowTemplate let-row let-column="column">
     @if (column.key === 'foto') {
