--- a/code/frontend/src/app/pages/logged/banner-management/banner-management.component.scss
+++ b/code/frontend/src/app/pages/logged/banner-management/banner-management.component.scss
@@ -110,6 +110,7 @@
         color: #059669;
         font-weight: 600;
         background: #d1fae5;
+        margin-left: 6px;
         padding: 2px 8px;
         border-radius: 4px;
         display: inline-block;
